--- a/package.json
+++ b/package.json
@@ -8,17 +8,28 @@
     "ms": "^2.0.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-latest": "^6.24.1",
+    "express": "^4.16.2",
+    "express-urlrewrite": "^1.2.0",
     "rollup": "^0.50.0",
+    "rollup-endpoint": "^0.2.2",
+    "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-commonjs": "^8.2.6",
-    "rollup-plugin-node-resolve": "^3.0.0"
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-uglify": "^2.0.1"
   },
   "scripts": {
-    "build": "rollup -c",
+    "build": "rollup -c -i src/main.js -n howLongUntilLunch ",
+    "build:umd": "rollup -c -i src/main.js -o dist/Dropbox-sdk.js -n Dropbox",
     "dev": "rollup -c -w",
     "test": "node test/test.js",
     "pretest": "npm run build"
   },
-  "files":[
+  "files": [
     "dist"
   ]
 }
